    * JsonDict and JsonList objects for dict or list json request variant.
    * JSONGeneratorResponse to returned json from generators as generator.
    * Fixies for new openapi_core 0.13.0 version.
    * Better error log when error in after_request process
    * PoorSession have HttpOnly flag always, when it is self-contained session
      cookie.
    * Secure flag and parameter for PoorSession

==== 2.2.0 ====
    * openapi after_request example fix
    * http_state and default decorator fix to chain usage
    * JSONResponse
    * 418 I'am a teapot state
    * SessionError exception based on RuntimeError
    * EmptyResponse fix

==== 2.1.1 ====
    * OpenAPIRequest host_url property fix
    * Native HTTP Errors fix
    * before_request called before all requests

==== 2.1.0 ====
    * FileResponse fix
    * Request.api property instead of Request.config, which is more unusable.

==== 2.0.1 ====
    * use wsgi.file_wrapper only for FileResponse

==== 2.0.0 ====
    * Python3 support only
    * Removed deprecated methods
    * Using python logging with 'poorwsgi' logger
    * poor_SecretKey is not set by default
    * Documentation rewrited to rst
    * Request is now input object only
        * `clength` property renamed to `content_length`
        * properties and attributes clean
        * document_root is property now
        * uri_rule contain original definition of regular rule
        * accept_* properties from headers
        * mime_type is stored in mime_type properties
        * * new `data` property, return full data from input buffer
        * (re)new `path_args` property
        * new configuration options `auto_data` and `data_size`

    * Response classes for output
        * not use buffer size
        * callable for use in application
        * new `data` property - could not work with generators
    Application
        * `pre_process` is `before_request` and `post_process` is
          `after_request`
        * file_callback application property