@@ -7,6 +7,7 @@
     * PoorSession have HttpOnly flag always, when it is self-contained session
       cookie.
     * Secure flag and parameter for PoorSession
+    * SessionError when not possible to decode session
 
 ==== 2.2.0 ====
     * openapi after_request example fix
